# margin_invest

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  LICENSE  README.md  admin_api.sh  admin_patch.sh  cancel_job.sh  capabilities.yaml  check_jobs.sh  check_jobs_25.sh  docker-compose.yml  done_gate.yaml  main.py  monitor_backfill.sh  pyproject.toml  railway.toml  trigger_backfill.sh
api/: .env.example  .env.production.example  Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 059d47ea33c5_merge_backtest_error_message_and_rarity_.py  16e71339a83e_add_edgar_index_cache_table.py  19217ac20a10_add_sic_sector_map_and_columns.py  20b055b686eb_add_shares_outstanding_to_assets.py  213b952d6813_add_processed_webhook_events_table.py  25c03fc53f59_add_filing_texts_and_filing_sentiment_.py  271a8ec6b468_add_v3_scores_table.py  27dd7a410171_rename_tier_scout_operator_allocator_to_.py  29c44530fc6f_add_error_message_to_backtest_runs.py  30f977239bf3_add_historical_scores_table.py  3209b20e008b_add_v2_conviction_columns_to_scores.py  3438c11743ce_add_oauth_id_to_users.py  3bffc383b6f9_add_last_login_at_to_users.py  401504d7e26d_add_missing_columns_tickers_partial_.py  4c4fefbc50d3_add_avatar_columns_to_users.py  4d3c03eb2d62_add_price_target_invalid_reason_to_.py  4ee2f8646129_initial_schema_with_timestamptz.py  51e51cbdf62c_add_events_and_notifications_tables.py  5953a89f8035_add_v4_scores_table_and_ml_model_runs_.py  5e4cd67a4c42_add_country_to_assets.py  63424f126852_add_audit_log_table.py  644c974fd652_add_model_checksum_columns_to_ml_model_.py  6b9ee008f974_add_rarity_scores_and_rarity_.py  7085e0ad6ae4_add_consistency_flags_to_financial_data.py  7516b4926f73_backfill_linked_providers_for_existing_.py  768260de7cb6_add_pipeline_models_universe_ingestion_.py  7dbb737440b5_add_password_reset_columns_to_users.py  844280ae9f2f_add_price_targets_and_signal_transitions.py  874a8844567a_add_correction_events_and_sector_.py  a1b2c3d4e5f6_add_composite_raw_score_to_scores.py  a2b3c4d5e6f7_add_watchlists_and_score_alerts_tables.py  a60167c570ed_add_timeseries_and_backtest_tables.py  a6ad87bfa838_merge_healing_and_governance_migration_.py  a8f1c2d3e4f5_add_pipeline_id_to_ingestion_runs_and_.py  ad3f8bd4da04_add_password_changed_at_to_credential_.py  b19b2beed222_add_insider_transaction_history_table.py  b1c2d3e4f5a6_add_experiment_signups_table.py  b41b14886872_add_subscription_fields_and_api_key_.py  b7c3d4e5f6a7_add_data_categories_present_to_financial_data.py  b8633f3bb979_add_risk_diffing_tables.py  (+19 more)
api/src/margin_api/: __init__.py  app.py  cli.py  config.py  deps.py  worker.py  workers.py
api/tests/: conftest.py  test_13f_analytics_routes.py  test_13f_ingest.py  test_13f_manager_routes.py  test_13f_models.py  test_13f_routes.py  test_13f_schemas.py  test_accumulation_service.py  test_admin.py  test_admin_coverage.py  test_admin_deps.py  test_api_integration.py  test_api_key_models.py  test_api_key_service.py  test_app.py  test_auth_models.py  test_auth_routes.py  test_auth_routes_coverage.py  test_auth_service.py  test_avatar_models.py  test_avatar_routes.py  test_backtest.py  test_backtest_integration.py  test_backtest_schemas.py  test_backtest_seed.py  test_backtest_workers.py  test_batched_ingest_config.py  test_billing_coverage.py  test_billing_routes.py  test_billing_service.py  test_category_fallback.py  test_change_password.py  test_circuit_breaker.py  test_cli.py  test_cli_ablation.py  test_cli_backfill.py  test_cli_coverage.py  test_cli_ingest.py  test_cli_score_universe.py  test_cli_sue_percentile.py  (+93 more)
api/tests/archiver/: conftest.py  test_github.py  test_hasher.py  test_manifest.py  test_models.py  test_r2.py  test_scheduler.py  test_snapshot.py  test_worker.py
api/tests/audit/: conftest.py  test_attribution.py  test_bundler.py  test_end_to_end.py  test_forward_returns.py  test_import.py  test_schema.py  test_walk_forward.py
api/tests/data/: test_fred_client.py  test_macro_data_client.py
api/tests/db/: test_correction_models.py  test_models.py  test_score_components_model.py  test_unified_user_model.py  test_v2_score_columns.py
api/tests/middleware/: test_mfa_enforcement.py
api/tests/routes/: test_admin_auth.py  test_admin_coverage_p2.py  test_admin_governance_config.py  test_admin_timing.py  test_admin_webhooks.py  test_alerts.py  test_auth_security_endpoints.py  test_backtest_endpoints.py  test_calibration_status.py  test_dashboard_v4.py  test_dashboard_v4_primary.py  test_dna.py  test_experiment.py  test_governance.py  test_live_bar_injection.py  test_market_pulse.py  test_ops.py  test_proposals.py  test_public_scores.py  test_rarity_endpoints.py  test_scores_v4.py  test_scores_v4_fields.py  test_sectors.py  test_shadow_portfolio.py  test_signal_recompute.py  test_thirteenf_analytics.py  test_transparency.py  test_universe_funnel.py  test_v2_dashboard_route.py  test_v3_deprecation.py  test_v3_scores.py  test_watchlist.py
api/tests/schemas/: test_errors.py  test_public_score_schema.py  test_score_schema_v4_fields.py  test_scores.py  test_v2_pick_summary.py  test_v2_score_response.py
api/tests/security/: test_audit_log.py  test_hmac_auth.py  test_jwt_auth.py  test_mfa_complete.py  test_webhook_idempotency.py
api/tests/services/: test_analytics.py  test_analytics_coverage.py  test_backtest_wiring.py  test_consistency.py  test_daily_update.py  test_drawdown_screener.py  test_edgar_backfill.py  test_edgar_index_builder.py  test_email_expanded.py  test_form4_parser.py  test_governance_config.py  test_insider_service.py  test_nlp_analyzer.py  test_pit_correctness.py  (+14 more)
engine/: foreign_skips.yaml  pyproject.toml  symbol_overrides.yaml  universe.yaml
engine/config/: filters.yaml  thresholds.yaml
engine/tests/: test_accumulation.py  test_correlation.py  test_correlation_shrunk.py  test_cusip_resolver.py  test_edgar_13f.py  test_full_pipeline.py  test_golden_fixture.py  test_models.py  test_research_v2_integration.py  test_scoring_models.py  test_universe_config.py  test_universe_screener.py
(+1718 files in other folders)
