[project]
name = "margin-invest"
version = "0.1.0"
description = "Once-in-a-generation, high-conviction investment analysis"
readme = "README.md"
requires-python = ">=3.13.5"

[tool.uv.workspace]
members = ["engine", "api"]

[tool.pytest.ini_options]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"api/tests/services/test_xbrl_parser.py" = ["E501"]
"api/src/margin_api/services/edgar/index_builder.py" = ["E501"]
"api/tests/services/test_edgar_index_builder.py" = ["E501"]
"api/tests/workers/test_workers_coverage.py" = ["E501"]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
