[project]
name = "margin-api"
version = "0.1.0"
description = "Margin Invest API service"
requires-python = ">=3.13.5"
dependencies = [
    "margin-engine",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/margin_api"]

[tool.uv.sources]
margin-engine = { workspace = true }
