[project]
name = "margin-api"
version = "0.1.0"
description = "Margin Invest API service"
requires-python = ">=3.13.5"
dependencies = [
    "margin-engine",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "asyncpg>=0.30",
    "alembic>=1.15",
    "arq>=0.26",
    "argon2-cffi>=23.1.0",
    "pyotp>=2.9.0",
    "cryptography>=44.0.0",
    "webauthn>=2.5.0",
    "stripe>=14.3.0",
    "pillow>=12.1.1",
    "boto3>=1.42.49",
    "python-multipart>=0.0.22",
    "httpx>=0.28.1",
    "bcrypt>=5.0.0",
    "resend>=2.0.0",
    "pyjwt>=2.11.0",
    "slowapi>=0.1.9",
    "tenacity>=9.0.0",
    "sentry-sdk[fastapi]>=2.54.0",
    "posthog>=7.9.7",
    "pandas-market-calendars>=4.6.0",
    "anthropic>=0.86.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/margin_api"]

[tool.uv.sources]
margin-engine = { workspace = true }

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "fakeredis>=2.33.0",
    "greenlet>=3.3.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.0.0",
]
