[project]
name = "margin-engine"
version = "0.1.0"
description = "Margin Invest scoring engine — pure Python analysis library"
requires-python = ">=3.13.5"
dependencies = [
    "pydantic>=2.10",
    "numpy>=2.2",
    "scipy>=1.15",
    "yfinance>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/margin_engine"]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
