[project]
name = "margin-engine"
version = "0.1.0"
description = "Margin Invest scoring engine — pure Python analysis library"
requires-python = ">=3.13.5"
dependencies = [
    "pydantic>=2.10",
    "numpy>=2.2",
    "scipy>=1.15",
    "yfinance>=1.1.0",
    "pyyaml>=6.0.3",
    "lxml>=5.0",
    "httpx>=0.27",
    "polygon-api-client>=1.16.3",
    "finnhub-python>=2.4.27",
    "cvxpy>=1.6",
    "scikit-learn>=1.6",
    "lightgbm>=4.6",
    "torch>=2.5",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/margin_engine"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
]
